seunit2.ch2.2.html

--- a/seunit2.ch2.2.html
+++ b/seunit2.ch2.2.html
@@ -42,7 +42,7 @@
 
 <div class="container">
   <h1>Requirements Elicitation – Software Engineering</h1>
-  <p><strong>Last Updated: 14 Mar, 2024</strong></p>
+  <img width="100%" height="100%" src="https://static.javatpoint.com/tutorial/software-engineering/images/requirement-engineering.jpg" alt="requirement">
 
   <h2 class="section-title">What is Requirement Elicitation?</h2>
   <p>Requirements elicitation is perhaps the most difficult, most error-prone, and most communication-intensive software development.</p>
