--- a/os.html
+++ b/os.html
@@ -42,8 +42,9 @@
     <h1>SYLLABUS</h1>
     <pre>
     UNIT1: 
-    <strong>CHAPTER 1</strong> : INTRODUCTION TO SOFTWARE ENGINEERING
-    TOPICS: <a href="evaluation.html">The Evolution Of Software</a>,<a href="nature.html">changing nature of software</a> ,<a href="myths.html">Software myths</a>
+    <strong>CHAPTER 1</strong> : OPERATING SYSTEM - INTRODUCTION
+    TOPICS: <a href="evaluation.html">Structures - Simple Batch, Multiprogrammed, Time-Shared, Personal Computer, Parallel, Distribited Systems, Real-Time System</a>,<a href="nature.html">System Components</a> ,<a href="myths.html">Operating Services</a> ,<a href="">System Calls</a>
+                                                                                                                                                                                                                                                                   
     <strong>CHAPTER 2</strong>: A GENERIC VIEW OF SOFTWARE
     TOPICS:
     </pre>
