--- a/os.html
+++ b/os.html
@@ -42,8 +42,8 @@
     <h1>SYLLABUS</h1>
     <pre>
     UNIT1: 
-    <strong>CHAPTER 1</strong> : OPERATING SYSTEM - INTRODUCTION
-    TOPICS: <a href="evaluation.html">Structures - Simple Batch, Multiprogrammed, Time-Shared, Personal Computer, Parallel, Distribited Systems, Real-Time System</a>,<a href="nature.html">System Components</a> ,<a href="myths.html">Operating Services</a> ,<a href="">System Calls</a>
+    <strong>CHAPTER 1</strong> : OPERATING SYSTEM 
+    TOPICS: <a href="introduction.html">Introduction</a>, <a href="evaluation.html">Structures - Simple Batch, Multiprogrammed, Time-Shared, Personal Computer, Parallel, Distribited Systems, Real-Time System</a>,<a href="nature.html">System Components</a> ,<a href="myths.html">Operating Services</a> ,<a href="">System Calls</a>
                                                                                                                                                                                                                                                                    
     <strong>CHAPTER 2</strong>: A GENERIC VIEW OF SOFTWARE
     TOPICS:
