--- a/os.html
+++ b/os.html
@@ -43,7 +43,7 @@
     <pre>
     UNIT1: 
     <strong>CHAPTER 1</strong> : OPERATING SYSTEM 
-    TOPICS: <a href="osunit1.ch1.1.html">Introduction</a>, <a href="evaluation.html">Structures - Simple Batch, Multiprogrammed, Time-Shared, Personal Computer, Parallel, Distribited Systems, Real-Time System</a>,<a href="nature.html">System Components</a> ,<a href="myths.html">Operating Services</a> ,<a href="">System Calls</a>
+    TOPICS: <a href="osunit1.ch1.1.html">Introduction</a>, <a href="osunit1.ch1.2.html">Structures - Simple Batch, Multiprogrammed, Time-Shared, Personal Computer, Parallel, Distribited Systems, Real-Time System</a>,<a href="osunit1.ch1.1.html">System Components</a> ,<a href="osunit1.ch1.1.html">Operating Services</a> ,<a href="osunit1.ch1.1.html">System Calls</a>
                                                                                                                                                                                                                                                                    
     <strong>CHAPTER 2</strong>: A GENERIC VIEW OF SOFTWARE
     TOPICS:
