--- a/osunit1.1.2.html
+++ b/osunit1.1.2.html
@@ -53,11 +53,12 @@
             <p>
                 The system put all of the jobs in a queue on the basis of first come first serve and then executes the jobs one by one. The users collect their respective output when all the jobs get executed.
             </p>
-            <img src="" width="100%" height="100%" alt="" >
+            <img src="https://static.javatpoint.com/operating-system/images/batch-operating-system_1.png" width="100%" height="100%" alt="" >
             <p>
                 The purpose of this operating system was mainly to transfer control from one job to another as soon as the job was completed. It contained a small set of programs called the resident monitor that always resided in one part of the main memory. The remaining part is used for servicing jobs.
               
             </p>
+            <img src="https://static.javatpoint.com/operating-system/images/batch-operating-system2.png" width="100%" height="100%" alt="">
             <div class="advantages">
                 <h4>Advantages of Batch OS:</h4>
                 <p>The use of a resident monitor improves computer efficiency as it eliminates CPU time between two jobs.</p>
@@ -66,6 +67,11 @@
                 <h4>Disadvantages of Batch OS:</h4>
                 <p>
                     1. Starvation: Batch processing suffers from starvation.<br>
+                    <h3>For example</h3><br>
+                    <img src="https://static.javatpoint.com/operating-system/images/batch-operating-system.png" widht="100%" height="100%" alt"">
+                    <p>
+                    There are five jobs J1, J2, J3, J4, and J5, present in the batch. If the execution time of J1 is very high, then the other four jobs will never be executed, or they will have to wait for a very long time. Hence the other processes get starved.
+                    </p>
                     2. Not Interactive: Batch Processing is not suitable for jobs that are dependent on the user's input.
                 </p>
             </div>
@@ -78,6 +84,7 @@
             <p>
                 In a multiprogramming environment, when a process does its I/O, The CPU can start the execution of other processes. Therefore, multiprogramming improves the efficiency of the system.
             </p>
+            <img scr="https://static.javatpoint.com/operating-system/images/multiprogramming-operating-system.png" widht="100%" height="100%" alt"">
             <div class="advantages">
                 <h4>Advantages of Multiprogramming OS:</h4>
                 <p>Throughout the system, it increased as the CPU always had one program to execute.</p>
@@ -118,6 +125,7 @@
                 <li>Ubuntu</li>
                 <li>Fedora</li>
             </ul>
+            <img src="https://study.com/cimages/multimages/16/personal_operating_systems_examples.jpg" widht="100%" height="100%" alt"">
             <p>
                 The first of the above-mentioned personal computer operating systems, "Android," is the most well-known and widely used operating system worldwide. This operating system is used in smartphones.
             </p>
@@ -136,6 +144,7 @@
             <p>
                 In the Time Sharing operating system, computer resources are allocated in a time-dependent fashion to several programs simultaneously. Thus it helps to provide a large number of user's direct access to the main computer. It is a logical extension of multiprogramming. In time-sharing, the CPU is switched among multiple programs given by different users on a scheduled basis.
             </p>
+            <img src="https://static.javatpoint.com/operating-system/images/time-sharing-operating-system.png" widht="100%" height="100%" alt"">
             <p>
                 A time-sharing operating system allows many users to be served simultaneously, so sophisticated CPU scheduling schemes and Input/output management are required.
             </p>
@@ -155,6 +164,7 @@
             <p>
                 The Distributed Operating system is not installed on a single machine, it is divided into parts, and these parts are loaded on different machines. A part of the distributed Operating system is installed on each machine to make their communication possible. Distributed Operating systems are much more complex, large, and sophisticated than Network operating systems because they also have to take care of varying networking protocols.
             </p>
+            <img src="https://static.javatpoint.com/operating-system/images/time-sharing-operating-system2.png" widht="100%" height="100%" alt"">
             <div class="advantages">
                 <h4>Advantages of Distributed Operating System:</h4>
                 <p>The distributed operating system provides sharing of resources.</p>
@@ -170,9 +180,11 @@
             <p>
                 In Real-Time Systems, each job carries a certain deadline within which the job is supposed to be completed, otherwise, the huge loss will be there, or even if the result is produced, it will be completely useless.
             </p>
+            <img src="https://static.javatpoint.com/operating-system/images/real-time-operating-system.png" widht="100%" height="100%" alt"">
             <p>
                 The Application of a Real-Time system exists in the case of military applications, if you want to drop a missile, then the missile is supposed to be dropped with a certain precision.
             </p>
+              <img src="https://static.javatpoint.com/operating-system/images/real-time-operating-system2.png" widht="100%" height="100%" alt"">
             <div class="advantages">
                 <h4>Advantages of Real-time operating system:</h4>
                 <p>Easy to layout, develop and execute real-time applications under the real-time operating system.</p>
