--- a/osunit1.ch1.3.html
+++ b/osunit1.ch1.3.html
@@ -197,6 +197,14 @@ The components of an operating system play a key role to make a variety of compu
             </p>
           <img src="static.javatpoint.com/operating-system/images/components-of-operating-system9.png" width="100%" height="100%" alt="">
             <p>
+                Many commands are given to the operating system by control statements. A program that reads and interprets control statements is automatically executed when a new job is started in a batch system or a user logs in to a time-shared system. This program is variously called.
+            </p>
+            <ul>
+                <li>The control card interpreter,</li>
+                <li>The command-line interpreter</li>
+                <li>The shell (in UNIX), and so on.</li>
+            </ul>
+            <p>
                 Its function is quite simple, get the next command statement, and execute it. The command statements deal with process management, I/O handling, secondary storage management, main memory management, file system access, protection, and networking.
             </p>
         </div>
