--- a/os.html
+++ b/os.html
@@ -46,7 +46,7 @@
     TOPICS: <a href="osunit1.ch1.1.html">Introduction</a>, <a href="osunit1.ch1.2.html">Structures - Simple Batch, Multiprogrammed, Time-Shared, Personal Computer, Parallel, Distribited Systems, Real-Time System</a>,<a href="osunit1.ch1.3.html">System Components</a> ,<a href="osunit1.ch1.4.html">Operating Services</a> ,<a href="osunit1.ch1.5.html">System Calls</a>
                                                                                                                                                                                                                                                                    
     <strong>CHAPTER 2</strong>: Process
-    TOPICS:<a href="osunit1.ch2.1.html">Process concepts and scheduling</a>, <a href="osunit1.ch2.2.html">Oerations on processes</a>,<a href="osunit1.ch2.3.html">Cooperating Processes</a>, <a href="osunit1.ch2.4.html">Threads</a>
+    TOPICS:<a href="osunit1.ch2.1.html">Process concepts and scheduling</a>, <a href="osunit1.ch2.2.html">Operations on processes</a>,<a href="osunit1.ch2.3.html">Cooperating Processes</a>, <a href="osunit1.ch2.4.html">Threads</a>
     </pre>
     
     <pre>
