--- a/osunit1.ch1.4.html
+++ b/osunit1.ch1.4.html
@@ -1,1 +1,84 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Operating System Services</title>
+<style>
+  body {
+    background-color: #A2CD5A;
+    color: #000;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 20px;
+  }
+  .container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  h1 {
+    color: #333;
+    text-align: center;
+  }
+  h2 {
+    color: #555;
+  }
+  h3 {
+    color: #777;
+  }
+  p {
+    line-height: 1.6;
+    margin-bottom: 15px;
+  }
+</style>
+</head>
+<body>
+<div class="container">
+  <h1>Operating System Services</h1>
+  <p>An operating system is a software that acts as an intermediary between the user and computer hardware. It is a program with the help of which we are able to run various applications. It is the one program that is running all the time. Every computer must have an operating system to smoothly execute other programs. The OS coordinates the use of the hardware and application programs for various users. It provides a platform for other application programs to work. The operating system is a set of special programs that run on a computer system that allows it to work properly. It controls input-output devices, execution of programs, managing files, etc.</p>
 
+  <h2>Services of Operating System</h2>
+
+  <h3>Program Execution</h3>
+  <p>It is the Operating System that manages how a program is going to be executed. It loads the program into the memory after which it is executed. The order in which they are executed depends on the CPU Scheduling Algorithms. A few are FCFS, SJF, etc. When the program is in execution, the Operating System also handles deadlock i.e. no two processes come for execution at the same time. The Operating System is responsible for the smooth execution of both user and system programs. The Operating System utilizes various resources available for the efficient running of all types of functionalities.</p>
+
+  <h3>Input Output Operations</h3>
+  <p>Operating System manages the input-output operations and establishes communication between the user and device drivers. Device drivers are software that is associated with hardware that is being managed by the OS so that the sync between the devices works properly. It also provides access to input-output devices to a program when needed.</p>
+
+  <h3>Communication between Processes</h3>
+  <p>The Operating system manages the communication between processes. Communication between processes includes data transfer among them. If the processes are not on the same computer but connected through a computer network, then also their communication is managed by the Operating System itself.</p>
+
+  <h3>File Management</h3>
+  <p>The operating system helps in managing files also. If a program needs access to a file, it is the operating system that grants access. These permissions include read-only, read-write, etc. It also provides a platform for the user to create, and delete files. The Operating System is responsible for making decisions regarding the storage of all types of data or files, i.e, floppy disk/hard disk/pen drive, etc. The Operating System decides how the data should be manipulated and stored.</p>
+
+  <h3>Memory Management</h3>
+  <p>Let’s understand memory management by OS in a simple way. Imagine a cricket team with a limited number of players. The team manager (OS) decides whether the upcoming player will be in playing 11, playing 15, or will not be included in the team, based on his performance. In the same way, OS first checks whether the upcoming program fulfills all requirements to get memory space or not, if all things good, it checks how much memory space will be sufficient for the program and then load the program into memory at a certain location. And thus, it prevents the program from using unnecessary memory.</p>
+
+  <h3>Process Management</h3>
+  <p>Let’s understand the process management in a unique way. Imagine our kitchen stove as the (CPU) where all cooking (execution) really happens and the chef as the (OS) who uses the kitchen-stove (CPU) to cook different dishes (program). The chef (OS) has to cook different dishes (programs) so he ensures that any particular dish (program) does not take a long time (unnecessary time) and all dishes (programs) get a chance to be cooked (execution). The chef (OS) basically schedules time for all dishes (programs) to run the kitchen (all the system) smoothly and thus cooks (executes) all the different dishes (programs) efficiently.</p>
+
+  <h3>Security and Privacy</h3>
+  <p><strong>Security:</strong> OS keeps our computer safe from an unauthorized user by adding a security layer to it. Basically, Security is nothing but just a layer of protection which protects the computer from bad guys like viruses and hackers. OS provides us defenses like firewalls and anti-virus software and ensures good safety of the computer and personal information.</p>
+  <p><strong>Privacy:</strong> OS gives us the facility to keep our essential information hidden like having a lock on our door, where only you can enter and others are not allowed. Basically, it respects our secrets and provides us the facility to keep them safe.</p>
+
+  <h3>Resource Management</h3>
+  <p>System resources are shared between various processes. It is the Operating system that manages resource sharing. It also manages the CPU time among processes using CPU Scheduling Algorithms. It also helps in the memory management of the system. It also controls input-output devices. The OS also ensures the proper use of all the resources available by deciding which resource to be used by whom.</p>
+
+  <h3>User Interface</h3>
+  <p>User interface is essential and all operating systems provide it. Users either interface with the operating system through the command-line interface or graphical user interface or GUI. The command interpreter executes the next user-specified command. A GUI offers the user a mouse-based window and menu system as an interface.</p>
+
+  <h3>Networking</h3>
+  <p>This service enables communication between devices on a network, such as connecting to the internet, sending and receiving data packets, and managing network connections.</p>
+
+  <h3>Error Handling</h3>
+  <p>The Operating System also handles the error occurring in the CPU, in Input-Output devices, etc. It also ensures that an error does not occur frequently and fixes the errors. It also prevents the process from coming to a deadlock. It also looks for any type of error or bugs that can occur while any task. The well-secured OS sometimes also acts as a countermeasure for preventing any sort of breach of the Computer System from any external source and probably handling them.</p>
+
+  <h3>Time Management</h3>
+  <p>Imagine a traffic light as (OS), which indicates all the cars (programs) whether they should be stopped (red) => (simple queue), start (yellow) => (ready queue), move (green) => (under execution) and this light (control) changes after a certain interval of time at each side of the road (computer system) so that the cars (programs) from all sides of the road move smoothly without traffic.</p>
+</div>
+</body>
+</html>
