--- a/about.html
+++ b/about.html
@@ -1,72 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<style>
+  <title>About Us - College Syllabus Website</title>
+  <style>
     body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-}
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 20px;
+      background-color: #f3f72b;
+      /* Light grey background */
+    }
 
-header {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  padding: 20px 0;
-}
+    .container {
+      max-width: 800px;
+      margin: auto;
+      background-color: #fff;
+      /* White background for content */
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      /* Drop shadow effect */
+    }
+   
+    h1,
+    h2 {
+      text-align: center;
+      background-color: rgb(42, 221, 245);
+    }
 
-.content {
-  max-width: 800px;
-  margin: 20px auto;
-  padding: 0 20px;
-}
+    p {
+      margin-bottom: 20px;
+    }
 
-.description {
-  margin-bottom: 20px;
-}
+    .profile {
+      margin-bottom: 40px;
+    }
 
-.images {
-  display: flex;
-  justify-content: space-between;
-}
+    /* Background color for profiles */
+    .profile:nth-child(odd) {
+      background-color: #f9f9f9;
+      /* Light grey background for odd profiles */
+    }
+  </style>
+</head>
 
-.images img {
-  width: 45%;
-}
-
-footer {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  padding: 10px 0;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
-</style>
 <body>
-  <header>
+  <div class="container">
     <h1>About Us</h1>
-  </header>
-
-  <div class="content">
-    <div class="description">
-      <p>Welcome to our website! We are a team of passionate individuals dedicated to providing quality content and services.</p>
+    <div class="profile">
+      <h2>V.Abhishek(22TQ1A5621)</h2>
+      <p>As a student at Siddhartha Engineering, I'm currently immersed in the field of Computer Science Engineering,
+        focusing on Software Engineering. My aim is to master the intricacies of software development, honing my skills
+        to achieve excellence in this dynamic and ever-evolving domain.</p>
     </div>
-    <div class="images">
-      <img src="Myth1.png" alt="Image 1">
-      <img src="Myth1.png" alt="Image 2">
+    <div class="profile">
+      <h2>P.SAI PRANITH (22TQ1A55648)</h2>
+      <p>At Siddhartha Engineering, I'm passionately delving into the realm of Computer Science Engineering, specializing in Software Engineering. With a fervent dedication to mastering the art of software development, I strive to not only attain perfection but also continually improve and innovate in this exciting field.</p>
     </div>
+    <h2>Our Website</h2>
+    <p>Welcome to our college syllabus website! We created this platform to provide students with easy access to the
+      latest course materials and resources. Our goal is to streamline the learning process and foster academic success
+      for all students at SIDDARTHA  College.</p>
+    <h2>Contact Us</h2>
+    <p>If you have any questions, suggestions, or feedback, feel free to reach out to us:</p>
+    <ul>
+      <li>Email: <a href=""> vallabadassabhishek@gmail.com</a></li>
+      <li>Email: <a href="">saipranith235@gmail.com</a> </li>
+    </ul>
   </div>
-
   <footer>
-    <p>&copy; 2024 Your Company. All rights reserved.</p>
+    &copy; 2024 Siddhartha College Syllabus | All rights reserved.
   </footer>
 </body>
+
 </html>
