--- a/os.html
+++ b/os.html
@@ -81,8 +81,9 @@
    </pre>
    <pre>
     UNIT5: 
-    <strong>CHAPTER 1</strong>: FILE SYSTEM INTERFACE AND OPERATIONS
-    TOPICS: <a href="myths.html">SOFTWARE MYTHS</a>
+   <strong>CHAPTER 1</strong>: FILE SYSTEM INTERFACE AND OPERATONS
+    TOPICS: <a href="osunit5.ch1.1.html">Access methods</a>,<a href="osunit5.ch1.2.html">Directory Structure</a>,<a href="osunit5.ch1.3.html">Protection</a>,<a href="osunit5.ch1.4.html">File System
+        Structure</a>
         
     </pre>
         
